# x.h

./: .gitignore  README.md
c/: x.h
c/test/c/: CMakeLists.txt  test_x_err.c  test_x_timing.c
c/test/cuda/: CMakeLists.txt  test_x_err.cu
cpp/: Doxyfile  x.h
cpp/test/cpp/: CMakeLists.txt  test_x_err.cpp  test_x_gadget.cpp  test_x_log.cpp  test_x_mem.cpp  test_x_stopwatch.cpp  test_x_timing.cpp
cpp/test/cuda/: CMakeLists.txt  test_x_err.cu  test_x_mem.cu  test_x_stopwatch.cu  test_x_timing.cu
