CMAKE_MINIMUM_REQUIRED(VERSION 3.18 FATAL_ERROR)
PROJECT(x_test LANGUAGES C CUDA)

INCLUDE_DIRECTORIES(
  ../..
)

SET(CMAKE_C_STANDARD 99)
SET(CMAKE_C_STANDARD_REQUIRED ON)

# NOTE: This is required to make x_narg work with MSVC.
IF(MSVC)
  SET(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Xcompiler=/Zc:preprocessor")
ENDIF()

SET(CUDA_ARCHITECTURES 89)  # Testing on 4060

ADD_COMPILE_DEFINITIONS(X_ENABLE_CUDA=1)
ADD_COMPILE_DEFINITIONS(X_ENABLE_SOCKET=1)

ADD_EXECUTABLE(test_x_err test_x_err.cu)
