CMAKE_MINIMUM_REQUIRED(VERSION 3.25 FATAL_ERROR)
PROJECT(x_test LANGUAGES CXX)

INCLUDE_DIRECTORIES(
  ../..
)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

ADD_COMPILE_DEFINITIONS(X_ENABLE_ATOMIC=1)
ADD_COMPILE_DEFINITIONS(X_ENABLE_SOCKET=1)

SET(TEST_TARGETS
  test_x_err
  test_x_gadget
  test_x_log
  test_x_mem
  test_x_stopwatch
)

FOREACH(TARGET ${TEST_TARGETS})
  ADD_EXECUTABLE(${TARGET} ${TARGET}.cpp)
ENDFOREACH()
