CMAKE_MINIMUM_REQUIRED(VERSION 3.25 FATAL_ERROR)
PROJECT(x_test LANGUAGES CXX CUDA)

INCLUDE_DIRECTORIES(
  ../..
)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CUDA_ARCHITECTURES 89)  # Testing on 4060

ADD_COMPILE_DEFINITIONS(X_ENABLE_CUDA=1)
ADD_COMPILE_DEFINITIONS(X_ENABLE_SOCKET=1)

SET(TEST_TARGETS
  test_x_err
  test_x_mem
  test_x_stopwatch
)

FOREACH(TARGET ${TEST_TARGETS})
  ADD_EXECUTABLE(${TARGET} ${TARGET}.cu)
ENDFOREACH()
